ORCH-385 Remove ambiguous method OrchestratorBuilder#addMavenPlugin()